--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.16.10
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.13
 
 # Mod Properties
 mod_version=1.0.0
@@ -14,6 +14,7 @@ maven_group=ninja.trek
 archives_base_name=craneshot
 
 # Dependencies
-fabric_version=0.102.0+1.21
+# Fabric API
+fabric_version=0.121.0+1.21.5
 modmenu_version=11.0.3
 cloth_config_version=15.0.140
