--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ archives_base_name=craneshot
 # Dependencies
 # Fabric API
 fabric_version=0.121.0+1.21.5
-modmenu_version=11.0.3
+modmenu_version=14.0.0-rc.2
 cloth_config_version=15.0.140
