--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,25 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.13
+
 
 # Mod Properties
 mod_version=1.0.0
 maven_group=ninja.trek
 archives_base_name=craneshot
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+#
+# API Docs Reference (keep in sync with AGENTS.md):
+# - Fabric API: https://maven.fabricmc.net/docs/fabric-api-0.132.0+1.21.8/
+# - Yarn (mappings): https://maven.fabricmc.net/docs/yarn-1.21.8+build.1/
+# - Fabric Loader: https://maven.fabricmc.net/docs/fabric-loader-0.17.2/
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
 
-# Dependencies
 # Fabric API
-fabric_version=0.121.0+1.21.5
+fabric_version=0.124.2+1.21.5
 modmenu_version=14.0.0-rc.2
 cloth_config_version=15.0.140
