--- a/gradle.properties
+++ b/gradle.properties
@@ -12,15 +12,15 @@ archives_base_name=craneshot
 # check these on https://fabricmc.net/develop
 #
 # API Docs Reference (keep in sync with AGENTS.md):
-# - Fabric API: https://maven.fabricmc.net/docs/fabric-api-0.133.0+1.21.8/
-# - Yarn (mappings): https://maven.fabricmc.net/docs/yarn-1.21.8+build.1/
-# - Fabric Loader: https://maven.fabricmc.net/docs/fabric-loader-0.17.2/
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.17.2
+# - Fabric API: https://maven.fabricmc.net/docs/fabric-api-0.135.0+1.21.10/
+# - Yarn (mappings): https://maven.fabricmc.net/docs/yarn-1.21.10+build.2/
+# - Fabric Loader: https://maven.fabricmc.net/docs/fabric-loader-0.17.3/
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.3
 loom_version=1.11-SNAPSHOT
 
 # Fabric API
-fabric_version=0.133.0+1.21.8
-modmenu_version=15.0.0-beta.3
+fabric_version=0.135.0+1.21.10
+modmenu_version=16.0.0-rc.1
 cloth_config_version=15.0.140
